# pakchois

./: COPYING.P11  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  pakchois.c  pakchois.h  pakchois.pc.in  test.c
po/: Makevars  POTFILES.in  pakchois.pot
